tests/expectations/compiler/function/empty_arglist_fail.out
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:10:9
     |
  10 | program test.aleo {}
     |         ^^^^^^^^^
